[package]
name = "hdf-tools"
# adapted_from = "https://github.com/marccarre/rust-sample-project"

version = "0.1.0"

[dependencies]
hdf5 = "0.7.0"
ndarray = "0.13.1"
reqwest = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
debug = false

# [profile.doc]
# opt-level = 0
# debug = false